- Add custom_modules, in active_scaffold_config and global, to add modules which will be included after ActiveScaffold action modules, to customize the controllers.
- Add active_scaffold_subform_record_actions helper to render the destroy action on the rows of a subform, so it can be used to add more actions

= 4-1-stable
- Fix dirty attributes on refresh_field action, record is built on unsaved instance copying attributes, but it reports only changed attributes from the form now
- Fix incompatibility with Rails renderable objects (ViewComponent, Turbo Streams)

= 4.1.3
- Columns using bitfields are not treated as number columns (e.g. don't get numeric class in list)
- Fix loading tinymce when the form is loaded on page load
- Speed up rendering action link with images, when list is long, image_path can be reused

= 4.1.2
- Call cache_column_counts in get_row, so custom code changing queries to calculate counts is used when a row is refreshed too

= 4.1.1
- Load dartsass-sprockets, so it isn't required in the Gemfile
- Fix refreshing a column in a subform without sending the whole form

= 4.1.0
- Replace sassc-rails with dartsass-sprockets, as it's a compatible replacement, to ease migration to dartsass
- Use lowercase response headers as required by rack 3
- Add filters to list action
- Add prompt option to action link
- Support tabbed_by in show action too
- Support options hash for :add_new option, with mode: :popup to open create new form in a JS popup, and other options to change link texts
- Support setup option in tinymce config with function
- Support multiple values in constraints for columns
- Improve grouped search supporting to change the columns used with group clause
- Improve grouped search to support using virtual columns for calculations, defining which DB column use to calculate