@@ -62,15 +62,9 @@ class PaperclipTest < ActionView::TestCase
     opts = {name: 'record[logo]', id: 'record_logo', object: @record}
 
     @record.stubs(:logo).returns(stub(file?: true, original_filename: 'file', url: '/system/file', styles: Company.attachment_definitions[:logo]))
-    click_js = "jQuery(this).prev().val('true'); jQuery(this).parent().hide().next().show(); return false;"
-    change_js = "jQuery(this).parents('div.paperclip_controls').find('input.remove_file').val('false'); return false;"
     @document = Nokogiri::HTML::Document.parse(active_scaffold_input_paperclip(config.columns[:logo], opts))
-    assert_select 'div.paperclip_controls input[type=file]' do |match|
-      assert_equal match[0]['onchange'], change_js
-    end
-    assert_select 'div.paperclip_controls a[href="#"][onclick]' do |match|
-      assert_equal match[0]['onclick'], click_js
-    end
+    assert_select 'div.paperclip_controls input[type=file]'
+    assert_select 'div.paperclip_controls a.remove-file-btn'
     assert_select 'div.paperclip_controls input.remove_file[type=hidden][value=false]'
 
     @record.stubs(:logo).returns(stub(file?: false))
